# awssdk-instrumentation

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: init.rs  lib.rs  utils.rs
src/env/: ec2.rs  ecs.rs  eks.rs  imds.rs  lambda.rs  mod.rs
src/interceptor/: mod.rs  otel.rs  tracing.rs  utils.rs
src/interceptor/extract/: dynamodb.rs  mod.rs  s3.rs  sqs.rs
src/lambda/: macros.rs  mod.rs
src/lambda/layer/: mod.rs  otel.rs  tracing.rs  utils.rs
src/span_write/: mod.rs  otel.rs  tracing.rs
