[package]
name = "awssdk-instrumentation"
version = "0.0.0"
rust-version = "1.85.0"
edition = "2024"
authors = ["Jérémie RODON <jeremie.rodon@gmail.com>"]
license = "MIT"
description = "Out-of-the-box instrumentation for the AWS SDK for Rust, with special care for code running on AWS Lambda"
repository = "https://github.com/RustyServerless/awssdk-instrumentation"
documentation = "https://docs.rs/awssdk-instrumentation"
readme = "README.md"
keywords = ["aws", "otel", "xray", "lambda", "serverless"]
categories = ["development-tools::debugging"]


[dependencies]
log = "0.4"

# Core — always required
aws-smithy-runtime-api = { version = "1", features = ["client"] }
aws-smithy-types = "1"
aws-types = "1"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }

# Backend: tracing
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"], optional = true }
tracing-opentelemetry = { version = "0.32", default-features = false, optional = true }

# Environment: Lambda
lambda_runtime = { version = "1", optional = true }
pin-project = { version = "1", optional = true }

# Extraction: per-service SDK dependencies
aws-sdk-dynamodb = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }

# Export: X-Ray
opentelemetry-aws = { version = "0.19", features = ["xray-exporter", "xray-daemon-client", "xray-stdout-client"], optional = true }


[features]
default = ["tracing-backend", "env-lambda", "extract-dynamodb", "export-xray-daemon"]

# --- Backend features ---
tracing-backend = ["dep:tracing", "dep:tracing-opentelemetry", "dep:tracing-subscriber"]
otel-backend = []

# --- Environment features ---
env-lambda = ["dep:lambda_runtime", "dep:pin-project"]
env-ecs = []
env-eks = []
env-ec2 = []

# --- Extraction features ---
extract-dynamodb = ["dep:aws-sdk-dynamodb"]
extract-s3 = ["dep:aws-sdk-s3"]
extract-sqs = ["dep:aws-sdk-sqs"]

# --- Export features ---
export-xray-daemon = ["dep:opentelemetry-aws"]

[patch.crates-io]
opentelemetry-aws = { git = "https://github.com/RustyServerless/opentelemetry-rust-contrib", branch = "feat/aws-xray-exporter-wip" }
